minor: replace Collections.unmodifiable* with static factory methods